--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,22 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div id="wrapper" class="container">
+    <div class="navbar navbar-inverse">
+        <div class="navbar-inner navbar-fixed-top">
+            <div class="container">
+                <a id="movies_path" class="brand" href="/">movies@pyramid3213</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav pull-right">
+                        <li>
+                            <a id="signin" href="">Sign in</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div style="padding-top:3%;">
+        <div class="page-header row-fluid">
+            <h1 class="span10">Hot on Pyramid3213</h1>
+            <a id="new-movie" class="btn btn-primary" href="#">Add new movie</a>
+        </div>
+    </div>
+</div>
