--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,4 +19,25 @@
             <a id="new-movie" class="btn btn-primary" href="#">Add new movie</a>
         </div>
     </div>
+    
+
+    <div id="movie_app">
+        <div class="title">
+            <h1>Movies</h1>
+        </div>
+        <div class="content">
+            <div id="movies">
+                <ul id="movie-list"></ul>
+            </div>
+        </div>
+    </div>
+
+    <script type="text/template" id="item-template">
+    <div class="movie">
+    <div class="display">
+    <p class="movie-content">{{= m.Movie.models[1].get('title') }}</p>
+    </div>
+    </div>
+    </script>
+
 </div>
