displaying list of all movie titles

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -35,7 +35,7 @@
     <script type="text/template" id="item-template">
     <div class="movie">
     <div class="display">
-    <p class="movie-content">{{= m.Movie.models[1].get('title') }}</p>
+    <p class="movie-content">{{= m }}</p>
     </div>
     </div>
     </script>
