--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -21,23 +21,16 @@
     </div>
     
 
-    <div id="movie_app">
-        <div class="title">
-            <h1>Movies</h1>
+    <div id="movies-div" class="row">
+    
+    </div>
+    
+    <script type="text/template" id="movie-template">
+        <div class="span3 movie">
+            <h3 class="movie-title">{{= model.title }}</h3>
+            <img src="{{= model.img_url }}">
+            <p>Score: {{= model.avg_score }}</p>
         </div>
-        <div class="content">
-            <div id="movies">
-                <ul id="movie-list"></ul>
-            </div>
-        </div>
-    </div>
-
-    <script type="text/template" id="item-template">
-    <div class="movie">
-    <div class="display">
-    <p class="movie-content">{{= m.Movie.models[1].get('title') }}</p>
-    </div>
-    </div>
     </script>
 
 </div>
