--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
+<!-- Navigation bar. common for all pages -->
 <div id="wrapper" class="container">
     <div class="navbar navbar-inverse">
         <div class="navbar-inner navbar-fixed-top">
@@ -13,22 +14,122 @@
             </div>
         </div>
     </div>
+</div>
+<!-- End of navigation bar --> 
+<div id="indexContainer" class="container">
     <div style="padding-top:3%;">
         <div class="page-header row-fluid">
             <h1 class="span10">Hot on Pyramid3213</h1>
-            <a id="new-movie" class="btn btn-primary" href="#">Add new movie</a>
+            <a id="new-movie" class="btn btn-primary" href="#new_movie">Add new movie</a>
         </div>
     </div>
-    
-    <div id="movies-div" class="row">
+    <div id="movies-div" class="row-fluid">
     </div>
-    
-    <script type="text/template" id="movie-template">
-        <div class="span3 movie">
-            <h3 class="movie-title">{{= model.title }}</h3>
-            <img src="{{= model.img_url }}">
-            <p>Score: {{= model.avg_score }}</p>
-        </div>
-    </script>
-
 </div>
+
+<!-- index page. displaying all movies -->    
+<script type="text/template" id="movie-template">
+    <h3>
+        {{ if (model.title.length <= 16) { }}
+            {{= model.title }}
+        {{ } else { }}
+            {{= model.title.substring(0,13) + "..." }}
+        {{ } }}
+    </h3>
+    <img src="{{= model.img_url }}">
+    <p>Score:
+        {{ if (model.avg_score != null) { }}
+            {{= Math.round(model.avg_score * 100) / 100 }}
+        {{ } else { }}
+            0.0
+        {{ } }} 
+    </p>
+</script>
+<!-- End of index page --> 
+
+<!-- single movie page. view only one movie with its reviews -->
+<script type="text/template" id="single-movie-template">
+    <div class="row-fluid">
+        <a href="/" id="movies_path">movies</a> &gt;
+        {{= model.movie.title }}
+        <br><br>
+    </div>
+    <div class="row-fluid">
+        <div class="span3">
+            <img src="{{= model.movie.img_url }}">
+        </div>
+        <div class="span9">
+            <div>
+                <h3>{{= model.movie.title }}</h3>
+                <p>{{= model.movie.summary }}</p>
+                <p><a href="">Click here to delete this movie.</a> This action cannot be undone.</p>
+            </div>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="row-fluid">
+            <h3 class="span12">Reviews</h3>
+        </div>
+        <div id="reviews-div">
+            <!-- loop through each review and display them -->
+            {{ _.each(model.reviews, function(review) { }}
+                <div class="well">
+                    <div class="row-fluid">
+                        <p class="span12">
+                            <strong>{{= review.user.username }} </strong> reviewed.
+                            <span class="label label-success pull-right">
+                                {{= review.score }} points
+                            </span>
+                        </p>
+                    </div>
+                    <div class="row-fluid">
+                        <p class="span12">{{= review.comment }}</p>
+                    </div>
+                </div>
+            {{ }); }}
+        </div>
+        <div class="well">
+            <div id="new-review-input" class="row-fluid">
+                <label for="review_score" class="span3">Score (1-100)</label>
+                <input type="number" name="review[score]" id="review_score" class="span3">
+            </div>
+            <div class="row-fluid">
+                <label for="review_comment" class="span3">Comment</label>
+                <textarea rows="3" name="review[comment]" id="review_comment" cols="40" class="span9">
+                </textarea>
+            </div>
+            <a class="btn" id="create-review-btn" href="#">Create Review</a>
+        </div>
+    </div>
+</script>
+<!-- End of single movie page -->
+
+<!-- create new movie page -->
+<script type="text/template" id="create-movie-template">
+<div>
+    <h3>Create new movie</h3>
+    <form method="POST" name="movie">
+        <div class="control-group">
+            <label for="movie_title" class="control-label">Title</label>
+            <div class="controls">
+                <input type="text" required="true" size="30" name="movie[title]" id="movie_title" class="text_field">
+            </div>
+        </div>
+        <div class="control-group">
+            <label for="movie_summary" class="control-label">Summary</label>
+            <div class="controls">
+                <input type="text" required="true" size="30" name="movie[summary]" id="movie_summary" class="text_field">
+            </div>
+        </div>
+        <div class="control-group">
+            <label for="movie_img" class="control-label">Img</label>
+            <div class="controls">
+                <input type="file" required="true" name="movie[img]" id="movie_img">
+            </div>
+        </div>
+        <a id="submit" class="btn btn-primary">Create Movie</a>
+        <a class="btn" id="cancel" href="#">Cancel</a>
+    </form>
+</div>
+</script>
+<!-- end of create new movie page --> 
