--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,15 +18,15 @@
 <!-- End of navigation bar --> 
 <div id="indexContainer" class="container">
     <div style="padding-top:3%;">
-        <div class="page-header row-fluid">
+        <div class="page-header row">
             <h1 class="span10">Hot on Pyramid3213</h1>
             <a id="new-movie" class="btn btn-primary" href="#new_movie">Add new movie</a>
         </div>
     </div>
-    <div id="pagination" class="row-fluid">
+    <div id="pagination" class="row">
         <a id="prevLink">&lt;&lt; Prev</a> <a id="nextLink">Next &gt;&gt;</a>
     </div>
-    <div id="movies-div" class="row-fluid">
+    <div id="movies-div" class="row">
     </div>
 </div>
 
@@ -52,12 +52,12 @@
 
 <!-- single movie page. view only one movie with its reviews -->
 <script type="text/template" id="single-movie-template">
-    <div class="row-fluid">
+    <div class="row">
         <a href="/" id="movies_path">movies</a> &gt;
         {{= model.title }}
         <br><br>
     </div>
-    <div class="row-fluid">
+    <div class="row">
         <div class="span3">
             <img src="{{= model.img_url }}">
         </div>
@@ -69,15 +69,15 @@
             </div>
         </div>
     </div>
-    <div class="row-fluid">
-        <div class="row-fluid">
+    <div class="row">
+        <div class="row">
             <h3 class="span12">Reviews</h3>
         </div>
         <div id="reviews-div">
             <!-- loop through each review and display them -->
             {{ _.each(model.reviews.toJSON(), function(review) { }}
                 <div class="well">
-                    <div class="row-fluid">
+                    <div class="row">
                         <p class="span12">
                             <strong>{{= review.user.username }} </strong> reviewed.
                             <span class="label label-success pull-right">
@@ -85,18 +85,18 @@
                             </span>
                         </p>
                     </div>
-                    <div class="row-fluid">
+                    <div class="row">
                         <p class="span12">{{= review.comment }}</p>
                     </div>
                 </div>
             {{ }); }}
         </div>
         <div class="well">
-            <div id="new-review-input" class="row-fluid">
+            <div id="new-review-input" class="row">
                 <label for="review_score" class="span3">Score (1-100)</label>
                 <input type="number" name="review[score]" id="review_score" class="span3">
             </div>
-            <div class="row-fluid">
+            <div class="row">
                 <label for="review_comment" class="span3">Comment</label>
                 <textarea rows="3" name="review[comment]" id="review_comment" cols="40" class="span9">
                 </textarea>
