--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,5 @@
 <!-- Navigation bar. common for all pages -->
+<script> console.log(window.location.search);</script>
 <div id="wrapper" class="container">
     <div class="navbar navbar-inverse">
         <div class="navbar-inner navbar-fixed-top">
@@ -7,7 +8,7 @@
                 <div class="nav-collapse collapse">
                     <ul class="nav pull-right">
                         <li>
-                            <a id="signin" href="">Sign in</a>
+                            <a id="signin" href="/static_pages/login">Sign in</a>
                         </li>
                     </ul>
                 </div>
@@ -33,6 +34,7 @@
 <!-- index page. displaying all movies -->    
 <script type="text/template" id="movie-template">
     <h3>
+
         {{ if (model.title.length <= 16) { }}
             {{= model.title }}
         {{ } else { }}
