moved oauth to separate controller

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
                 <div class="nav-collapse collapse">
                     <ul class="nav pull-right">
                         <li>
-                            <a id="signin" href="/static_pages/login">Sign in</a>
+                            <a id="signin" href="/oauth/login">Sign in</a>
                         </li>
                     </ul>
                 </div>
