--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -93,7 +93,7 @@
             <div>
                 <h3>{{= model.title }}</h3>
                 <p>{{= model.summary }}</p>
-                <p><a href="/#movie/delete/{{= model.id }}">Click here to delete this movie.</a> This action cannot be undone.</p>
+                <p><a href="/#movie/delete/{{= model.id }}/creator/{{= model.user.id }}">Click here to delete this movie.</a> This action cannot be undone.</p>
             </div>
         </div>
     </div>
@@ -117,7 +117,7 @@
                         <p class="span12">{{= review.comment }}</p>
                     </div>
                     <div class="row-fluid">
-                        <a href="/#movie/{{= model.id }}/review/delete/{{= review.id }}"><button type="button" class="close">&times;</button></a>
+                        <a href="/#movie/{{= model.id }}/review/delete/{{= review.id }}/reviewer/{{= review.user.id }}"><button type="button" class="close">&times;</button></a>
                     </div>
                 </div>
             {{ }); }}
