--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -103,7 +103,7 @@
                 <textarea rows="3" name="review[comment]" id="review_comment" cols="40" class="span9">
                 </textarea>
             </div>
-            <a class="btn" id="create-review-btn" href="/#review/create">Create Review</a>
+            <a class="btn" id="create-review-btn" href="/#review/create/{{=model.id}}">Create Review</a>
         </div>
     </div>
 </script>
