--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -106,6 +106,11 @@
             {{ _.each(model.reviews.toJSON(), function(review) { }}
                 <div class="well">
                     <div class="row-fluid">
+                        <a href="/#movie/{{= model.id }}/review/delete/{{= review.id }}/reviewer/{{= review.user.id }}">
+                            <button type="button" class="close">&times;</button>
+                        </a>
+                    </div>
+                    <div class="row-fluid">
                         <p class="span12">
                             <strong>{{= review.user.username }} </strong> reviewed.
                             <span class="label label-success pull-right">
@@ -115,9 +120,6 @@
                     </div>
                     <div class="row-fluid">
                         <p class="span12">{{= review.comment }}</p>
-                    </div>
-                    <div class="row-fluid">
-                        <a href="/#movie/{{= model.id }}/review/delete/{{= review.id }}/reviewer/{{= review.user.id }}"><button type="button" class="close">&times;</button></a>
                     </div>
                 </div>
             {{ }); }}
