--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -93,7 +93,13 @@
             <div>
                 <h3>{{= model.title }}</h3>
                 <p>{{= model.summary }}</p>
-                <p><a href="/#movie/delete/{{= model.id }}/creator/{{= model.user.id }}">Click here to delete this movie.</a> This action cannot be undone.</p>
+                {{ if (model.user.id == uid) { }}
+                    <p>
+                        <a class="btn btn-danger" href="/#movie/delete/{{= model.id }}">Delete this movie!</a>&nbsp;
+                        <a class="btn btn-info" href="/#movie/update/{{= model.id }}">Update this movie</a>
+                    </p>
+                {{ } else { }}
+                {{ } }}
             </div>
         </div>
     </div>
@@ -106,9 +112,12 @@
             {{ _.each(model.reviews.toJSON(), function(review) { }}
                 <div class="well">
                     <div class="row-fluid">
-                        <a href="/#movie/{{= model.id }}/review/delete/{{= review.id }}/reviewer/{{= review.user.id }}">
-                            <button type="button" class="close">&times;</button>
-                        </a>
+                        {{ if (review.user.id == uid) { }}
+                            <a href="/#movie/{{= model.id }}/review/delete/{{= review.id }}">
+                                <button type="button" class="close">&times;</button>
+                            </a>
+                        {{ } else { }}
+                        {{ } }}
                     </div>
                     <div class="row-fluid">
                         <p class="span12">
