--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -49,7 +49,7 @@
             <a id="new-movie" class="btn btn-primary" href="#new_movie">Add new movie</a>
         </div>
     </div>
-    <div id="pagination" class="row">
+    <div id="pagination" class="row-fluid">
         <a id="prevLink">&lt;&lt; Prev</a> <a id="nextLink">Next &gt;&gt;</a>
     </div>
     <div id="movies-div" class="row">
@@ -151,6 +151,9 @@
 <!-- create new movie page -->
 <script type="text/template" id="create-movie-template">
 <div>
+    <div class="row-fluid">
+        <a href="/">List of movies</a>
+    </div>
     <h3>Create new movie</h3>
     <form method="POST" name="movie">
         <div class="control-group">
