--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -111,16 +111,8 @@
             {{ _.each(model.reviews.toJSON(), function(review) { }}
                 <div class="well">
                     <div class="row-fluid">
-                        {{ if (review.user.id == uid) { }}
-                            <a href="/#movie/{{= model.id }}/review/delete/{{= review.id }}">
-                                <button type="button" class="close">&times;</button>
-                            </a>
-                        {{ } else { }}
-                        {{ } }}
-                    </div>
-                    <div class="row-fluid">
                         <p class="span12">
-                            <strong>{{= review.user.username }} </strong> reviewed.
+                            <strong>{{ if (review.user.id == uid) { }}You{{ } else { }}{{= review.user.username }}{{ } }} </strong> reviewed.
                             <span class="label label-success pull-right">
                                 {{= review.score }} points
                             </span>
@@ -129,6 +121,14 @@
                     <div class="row-fluid">
                         <p class="span12">{{= review.comment }}</p>
                     </div>
+                    {{ if (review.user.id == uid) { }}
+                        <div class="row-fluid">
+                            <a href="/#movie/{{= model.id }}/review/delete/{{= review.id }}" class="btn btn-small btn-danger">
+                                Delete review
+                            </a>
+                        </div>
+                    {{ } else { }}
+                    {{ } }}
                 </div>
             {{ }); }}
         </div>
