--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -112,7 +112,7 @@
                 <div class="well">
                     <div class="row-fluid">
                         <p class="span12">
-                            <strong>{{ if (review.user.id == uid) { }}You{{ } else { }}{{= review.user.username }}{{ } }} </strong> reviewed.
+                            <strong>{{ if (review.user.id == uid) { }}You{{ } else { }}{{= review.user.username }}{{ } }} </strong> reviewed about <abbr class="timeago" title="{{=review.updated_at}}">time </abbr>.
                             <span class="label label-success pull-right">
                                 {{= review.score }} points
                             </span>
