--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -94,7 +94,7 @@
                 <p>{{= model.summary }}</p>
                 {{ if (model.user.id == uid) { }}
                     <p>
-                        <a class="btn btn-danger" href="/#movie/delete/{{= model.id }}">Delete this movie!</a>&nbsp;
+                        <a id="deleteMovieBtn" class="btn btn-danger" href="/#movie/delete/{{= model.id }}">Delete this movie!</a>&nbsp;
                         <a class="btn btn-info" href="/#movie/update/{{= model.id }}">Update this movie</a>
                     </p>
                 {{ } else { }}
@@ -155,7 +155,7 @@
         <a href="/">List of movies</a>
     </div>
     <h3>Create new movie</h3>
-    <form method="POST" name="movie">
+    <form enctype="multipart/form-data" method="POST" name="movie">
         <div class="control-group">
             <label for="movie_title" class="control-label">Title</label>
             <div class="controls">
@@ -179,4 +179,43 @@
     </form>
 </div>
 </script>
-<!-- end of create new movie page --> 
+<!-- end of create new movie page -->
+
+<!-- update movie page -->
+<script type="text/template" id="update-movie-template">
+<div>
+    <div class="row-fluid">
+        <a href="/">List of movies</a>
+    </div>
+    <h3>Update movie</h3>
+    <form enctype="multipart/form-data" method="POST" name="update_movie">
+        <div class="control-group">
+            <label for="movie_title" class="control-label">Title</label>
+            <div class="controls">
+                <input type="text" required="true" size="30" name="movie[title]" id="movie_title" class="text_field" value="{{= model.title}}">
+            </div>
+        </div>
+        <div class="control-group">
+            <label for="movie_summary" class="control-label">Summary</label>
+            <div class="controls">
+                <input type="text" required="true" size="30" name="movie[summary]" id="movie_summary" class="text_field" value="{{= model.summary}}">
+            </div>
+        </div>
+        <div class="control-group">
+            <label for="movie_img" class="control-label">Img</label>
+            <div class="controls">
+                <input type="file" required="true" name="movie[img]" id="movie_img">
+            </div>
+        </div>
+        <a id="updateMovieBtn" class="btn btn-primary">Update Movie</a>
+        <a class="btn" id="cancel" href="#">Cancel</a>
+    </form>
+    <div class="row">
+        <div class="span3">
+            Existing image: (will be replaced only if you submit a new image)<br>
+            <img src="{{= model.img_url }}">
+        </div>
+    </div>
+</div>
+</script>
+<!-- end of update movie page --> 
